deploy/k8s/ingress/ingress_istio.yaml
# kiali
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kiali
  namespace: istio-system
spec:
  rules:
  - host: kiali.k8s.hbchen.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
---
# grafana
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: istio-system
spec:
  rules:
  - host: grafana.k8s.hbchen.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
---
# prometheus
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: istio-system
spec:
  rules:
  - host: prometheus.k8s.hbchen.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
---
# tracing: jaeger
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tracing
  namespace: istio-system
spec:
  rules:
  - host: tracing.k8s.hbchen.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tracing
          servicePort: 80
---
